When selection change notifications are dispatched, they should target the root of the whole page, not the root of the current iframe.

R=dmazzoni@chromium.org, ellyjones@chromium.org
TESTED=Manually with Hangouts and HTML snippet from the bug.

Bug: 757840
Change-Id: I0cb757e0f028bc6b9e878ab7e6e5d03073f951ad
Reviewed-on: https://chromium-review.googlesource.com/626040
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Commit-Queue: Nektarios Paisios <nektar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#496340}
Former-commit-id: 9060ef68aaedf691a45467ad2a74db3313ba2388