content/browser/accessibility/browser_accessibility_manager_mac.mm
@@ -218,7 +218,8 @@ void BrowserAccessibilityManagerMac::NotifyAccessibilityEvent(
       break;
     case ui::AX_EVENT_DOCUMENT_SELECTION_CHANGED: {
       mac_notification = NSAccessibilitySelectedTextChangedNotification;
-      // WebKit fires a notification both on the focused object and the root.
+      // WebKit fires a notification both on the focused object and the page
+      // root.
       BrowserAccessibility* focus = GetFocus();
       if (!focus)
         break;  // Just fire a notification on the root.
@@ -231,7 +232,10 @@ void BrowserAccessibilityManagerMac::NotifyAccessibilityEvent(
         NSDictionary* user_info =
             GetUserInfoForSelectedTextChangedNotification();
 
-        BrowserAccessibility* root = GetRoot();
+        BrowserAccessibilityManager* root_manager = GetRootManager();
+        if (!root_manager)
+          return;
+        BrowserAccessibility* root = root_manager->GetRoot();
         if (!root)
           return;
 
